# libhv

./: .gitignore  CMakeLists.txt  Makefile  Makefile.vars
base/: hwebsocket.h
cmake/: vars.cmake
examples/: CMakeLists.txt
http/client/: websocket.cpp
unittest/: sizeof_test.cpp
